Transitioning site from React to Jekyll

--- a/_posts/projects/2020-04-03-gitlet.md
+++ b/_posts/projects/2020-04-03-gitlet.md
@@ -7,16 +7,16 @@ meta:
   keywords: "Jekyll, Pineapple"
 
 project:
-  title: "Yellow Pineapple"
-  type: "Jekyll"
-  url: "https://github.com/arnolds/pineapple"
+  title: "Gitlet"
+  type: "Academic Project"
+  url: ""
   logo: "/assets/images/projects/yellowpineapple/logo.png"
-  tech: "HTML, CSS, Boostrap, Sass, JavaScript, jQuery, Jekyll"
+  tech: "Java"
 
-agency:
-  title: "Yellow Pineapple Co"
-  url: "https://github.com/arnolds/pineapple"
-  year: "2017, 2018"
+# agency:
+#   title: "Yellow Pineapple Co"
+#   url: "https://github.com/arnolds/pineapple"
+  year: "2020"
 
 images:
   - image:
@@ -29,4 +29,4 @@ images:
     url: "/assets/images/projects/yellowpineapple/mobile.jpg"
     alt: "Yellow Pineapple website on a mobile device"
 ---
-<p>The pineapple is a herbaceous perennial, which grows to 1.0 to 1.5 m (3.3 to 4.9 ft) tall, although sometimes it can be taller. The plant takes almost three years to reach maturation. It can fruit a total of three times during its lifetime.</p>
+<p>A Java-based version-control system for local directories based on the basic features of Git. Functionality includes making commits of one or more files, checking out files/commits, viewing backup logs, maintaining branches, and merging changes between branches. Utilized hashing and serialization to save states of internal commit tree structures.</p>
