updated featured project posts

--- a/_posts/projects/2020-04-01-zendesk.md
+++ b/_posts/projects/2020-04-01-zendesk.md
@@ -11,11 +11,11 @@ project:
   type: "Personal Project"
   url: "https://github.com/shirleytxiao/ticket-viewer"
   logo: "/assets/images/projects/redpineapple/logo.png"
-  tech: "JavaScript, Zendesk API, NodeJS, Express"
+  tech: "JavaScript, Zendesk API, NodeJS, Pug.js (Jade), Express"
 
-# agency:
-#   title: "Zendesk Ticket Viewer"
-#   url: "https://github.com/shirleytxiao/ticket-viewer"
+agency:
+  title: "Github"
+  url: "https://github.com/shirleytxiao/ticket-viewer"
   year: "2020"
 
 images:
