--- a/_posts/projects/2020-04-03-gitlet.md
+++ b/_posts/projects/2020-04-03-gitlet.md
@@ -13,9 +13,9 @@ project:
   logo: "/assets/images/projects/yellowpineapple/logo.png"
   tech: "Java"
 
-# agency:
-#   title: "Yellow Pineapple Co"
-#   url: "https://github.com/arnolds/pineapple"
+agency:
+  title: "Project Spec"
+  url: "https://inst.eecs.berkeley.edu/~cs61b/sp20/materials/proj/proj3/"
   year: "2020"
 
 images:
