--- a/_posts/projects/2020-04-02-chumbot.md
+++ b/_posts/projects/2020-04-02-chumbot.md
@@ -11,11 +11,11 @@ project:
   type: "Personal Project"
   url: "https://github.com/shirleytxiao/chumbot"
   logo: "/assets/images/projects/greenpineapple/logo.png"
-  tech: "JavaScript, Discord API, AWS"
+  tech: "JavaScript, Discord API, NodeJS, DiscordJS, AWS"
 
-# agency:
-#   title: "Green Pineapple Co"
-#   url: "https://github.com/shirleytxiao/chumbot"
+agency:
+  title: "Github"
+  url: "https://github.com/shirleytxiao/chumbot"
   year: "2020"
 
 images:
