updated logo, about page, and featured projects setup

--- a/_posts/projects/2020-04-02-chumbot.md
+++ b/_posts/projects/2020-04-02-chumbot.md
@@ -1,7 +1,7 @@
 ---
 layout: project
 permalink: /:title/
-category: projects
+categories: featured projects
 
 meta:
   keywords: "discord, bot, chumbot, discordjs, nodejs, discord api"
