--- a/_posts/projects/2020-04-01-zendesk.md
+++ b/_posts/projects/2020-04-01-zendesk.md
@@ -1,7 +1,7 @@
 ---
 layout: project
 permalink: /:title/
-category: projects
+categories: featured projects
 
 meta:
   keywords: "Zendesk, Ticket Viewer, Ticket, CLI, web app"
