updated w project logos

--- a/_posts/projects/2020-04-04-numc.md
+++ b/_posts/projects/2020-04-04-numc.md
@@ -7,15 +7,15 @@ meta:
   keywords: "Jekyll, Pineapple"
 
 project:
-  title: "Gitlet"
+  title: "NumC"
   type: "Academic Project"
   url: ""
-  logo: "/assets/images/projects/yellowpineapple/logo.png"
+  logo: "/assets/images/projects/numc/n.png"
   tech: "Java"
 
 agency:
   title: "Project Spec"
-  url: "https://inst.eecs.berkeley.edu/~cs61b/sp20/materials/proj/proj3/"
+  url: "https://cs61c.org/fa20/projects/proj4/"
   year: "2020"
 
 images:
