--- a/_posts/projects/2020-04-02-chumbot.md
+++ b/_posts/projects/2020-04-02-chumbot.md
@@ -10,7 +10,7 @@ project:
   title: "ChumBot"
   type: "Personal Project"
   url: "https://github.com/shirleytxiao/chumbot"
-  logo: "/assets/images/projects/greenpineapple/logo.png"
+  logo: "/assets/images/projects/chumbot/cb2.png"
   tech: "JavaScript, Discord API, NodeJS, DiscordJS, AWS"
 
 agency:
@@ -20,13 +20,13 @@ agency:
 
 images:
   - image:
-    url: "/assets/images/projects/greenpineapple/devices.jpg"
-    alt: "Green Pineapple website on tablet, mobile and desktop"
+    url: "/assets/images/projects/chumbot/1.png"
+    alt: "Greeting"
   - image:
-    url: "/assets/images/projects/greenpineapple/desktop.jpg"
-    alt: "Green Pineapple website on a desktop device"
+    url: "/assets/images/projects/chumbot/2.png"
+    alt: "Kick user"
   - image:
-    url: "/assets/images/projects/greenpineapple/mobile.jpg"
-    alt: "Green Pineapple website on a mobile device"
+    url: "/assets/images/projects/chumbot/3.png"
+    alt: "Chumming"
 ---
 <p>A Discord bot to facilitate group matchings and Zoom meeting scheduling based on members’ common interests and available times, according to user input.</p>
