--- a/_posts/projects/2020-04-01-zendesk.md
+++ b/_posts/projects/2020-04-01-zendesk.md
@@ -20,13 +20,13 @@ agency:
 
 images:
   - image:
-    url: "/assets/images/projects/redpineapple/devices.jpg"
-    alt: "Red Pineapple website on tablet, mobile and desktop"
+    url: "/assets/images/projects/zendesk/1.png"
+    alt: "Browser-based app"
   - image:
-    url: "/assets/images/projects/redpineapple/desktop.jpg"
-    alt: "Red Pineapple website on a desktop device"
+    url: "/assets/images/projects/zendesk/2.png"
+    alt: "Browser-based app ticket selected"
   - image:
-    url: "/assets/images/projects/redpineapple/mobile.jpg"
-    alt: "Red Pineapple website on a mobile device"
+    url: "/assets/images/projects/zendesk/3.png"
+    alt: "CLI app"
 ---
 <p>Command line interface and web applications that display information about support tickets from a Zendesk account, using a paginated list. Implemented authorization and authentication protocols using an API Gateway to authenticate user and maintain security.</p>
