--- a/_posts/projects/2020-04-03-gitlet.md
+++ b/_posts/projects/2020-04-03-gitlet.md
@@ -20,13 +20,7 @@ agency:
 
 images:
   - image:
-    url: "/assets/images/projects/yellowpineapple/devices.jpg"
-    alt: "Yellow Pineapple website on tablet, mobile and desktop"
-  - image:
-    url: "/assets/images/projects/yellowpineapple/desktop.jpg"
-    alt: "Yellow Pineapple website on a desktop device"
-  - image:
-    url: "/assets/images/projects/yellowpineapple/mobile.jpg"
-    alt: "Yellow Pineapple website on a mobile device"
+    url: "/assets/images/projects/gitlet/1.png"
+    alt: "Gitlet logic"
 ---
 <p>A Java-based version-control system for local directories based on the basic features of Git. Functionality includes making commits of one or more files, checking out files/commits, viewing backup logs, maintaining branches, and merging changes between branches. Utilized hashing and serialization to save states of internal commit tree structures.</p>
