--- a/_posts/projects/2020-04-04-numc.md
+++ b/_posts/projects/2020-04-04-numc.md
@@ -11,7 +11,7 @@ project:
   type: "Academic Project"
   url: ""
   logo: "/assets/images/projects/numc/n.png"
-  tech: "Java"
+  tech: "Python, C, Python-C interface, SIMD, OpenMP"
 
 agency:
   title: "Project Spec"
@@ -20,13 +20,13 @@ agency:
 
 images:
   - image:
-    url: "/assets/images/projects/yellowpineapple/devices.jpg"
-    alt: "Yellow Pineapple website on tablet, mobile and desktop"
+    url: "/assets/images/projects/numc/1.png"
+    alt: "Instance methods"
   - image:
-    url: "/assets/images/projects/yellowpineapple/desktop.jpg"
-    alt: "Yellow Pineapple website on a desktop device"
+    url: "/assets/images/projects/numc/2.png"
+    alt: "Indexing"
   - image:
-    url: "/assets/images/projects/yellowpineapple/mobile.jpg"
-    alt: "Yellow Pineapple website on a mobile device"
+    url: "/assets/images/projects/numc/3.png"
+    alt: "Speedup tests"
 ---
-<p>A Java-based version-control system for local directories based on the basic features of Git. Functionality includes making commits of one or more files, checking out files/commits, viewing backup logs, maintaining branches, and merging changes between branches. Utilized hashing and serialization to save states of internal commit tree structures.</p>
+<p>A Python library based on Numpy that supports large, multi-dimensional arrays and matrices, and a corresponding collection of mathematical functions using the Python-C interface. Applied performance optimization techniques to speed up mathematical operations, with an emphasis on unrolling, SIMD instructions, and OpenMP parallelization.</p>
